--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/api/main",
+    "cli": "nest start cli",
     "lint": "eslint . --fix",
     "test": "jest --runInBand",
     "test:apps:api": "jest --selectProjects apps:api --runInBand",
@@ -40,6 +41,7 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "nest-commander": "^3.12.5",
     "openid-client": "^5.6.4",
     "passport": "^0.7.0",
     "passport-http-bearer": "^1.0.1",
