--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto-js": "^4.2.0",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "is-uuid": "^1.0.2",
@@ -57,6 +58,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.10",
     "@types/jest": "^29.5.2",
