--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ns-todos-server",
+  "name": "todos-lists-server",
   "version": "0.0.1",
   "description": "",
   "author": "Matthieu Hm",
